k8s-resource-manifests/tosca-syntax/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tosca-syntax-ingress
  namespace: sodalite-services
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: "sodalite-services-force-https-middleware@kubernetescrd"
spec:
  rules:
    - host: tosca-syntax.public-testbed.sodalite.eu
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tosca-syntax
                port:
                  number: 5000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tosca-syntax-ingress-tls
  namespace: sodalite-services
  annotations:
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  tls:
  - hosts:
      - tosca-syntax.public-testbed.sodalite.eu
    secretName: tosca-syntax-cert
  rules:
    - host: tosca-syntax.public-testbed.sodalite.eu
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tosca-syntax
                port:
                  number: 5000
